theme/bootstrapbase/less/moodle/core.less
/* ... */
.smartselect.compactmenu .smartselect_submenu.visible {
    display: block;
}
.smartselect.compactmenu .smartselect_menu {
    z-index: 1000;
    overflow: hidden;
}
.smartselect.compactmenu .smartselect_submenu .smartselect_submenu {
    z-index: 1020;
}
.smartselect.compactmenu .smartselect_submenuitem:hover > .smartselect_menuitem_label {
    font-weight: bold;
}
/**
* Registration
*/
#page-admin-registration-register .registration_textfield {
    width: 300px;
}
/**
* Enrol
*/
.userenrolment {
    width: 100%;
    border-collapse: collapse;
}
.userenrolment tr {
    vertical-align:top;
}
.userenrolment td {
    padding: 0;
    height: 41px;
}
.userenrolment .subfield {
    margin-right: 5px;
}
.userenrolment .col_userdetails .subfield_picture {
    float: left;
}
.userenrolment .col_lastseen {
    width: 150px;
}
.userenrolment .col_role {
    width: 262px;
}
.userenrolment .col_role .roles,
.userenrolment .col_group .groups {
    margin-right: 30px;
}
.userenrolment .col_role .role,
.userenrolment .col_group .group {
    float: left;
    padding: 3px;
    margin: 3px;
    white-space: nowrap;
}
.userenrolment .col_role .role a,
.userenrolment .col_group .group a {
    margin-left: 3px;
    cursor: pointer;
}
.userenrolment .col_role .addrole,
.userenrolment .col_group .addgroup {
    float: right;
    padding: 3px;
    margin: 3px;
    > *:hover {
        border-bottom:1px solid #666;
    }
}
.userenrolment .col_role .addrole img,
.userenrolment .col_group .addgroup img {
    vertical-align: baseline;
}

.dir-rtl .userenrolment .col_role .role {
    float: right;
}

.userenrolment .hasAllRoles .col_role .addrole {
    display: none;
}

.userenrolment .col_enrol .enrolment {
    float: left;
    padding: 3px;
    margin: 3px;
}
.userenrolment .col_enrol .enrolment a {
    float: right;
    margin-left: 3px;
}
#page-enrol-users {
    .enrol_user_buttons {
        float: right;
        .enrolusersbutton {
            display: inline;
            div,
            form {
                display: inline;
                margin-right: 0;
            }
        }
    }
    #filterform {
        .well;
        .well-small;
        display: inline-block;
        .fitem {
            display: inline-block;
            line-height: @baseLineHeight * 2;
            margin-right: .3em;
            white-space: nowrap;
            label {
                display: inline;
                line-height: @baseLineHeight;
                padding-right: .3em;
            }
            :before,
            :after {
                display: inline;
            }
        }
        div,
        fieldset {
            display: inline;
            float: none;
            clear: none;
            width: auto;
            margin: 0;
        }
        select,
        .ftext input {
            width: 7em;
        }
        input,
        select {
            margin-bottom: 0;
        }
    }
  .user-enroller-panel .uep-search-results .user .details {
    width: 237px;
  }
  .user-enroller-panel .uep-search-results .cohort .details {
    width: 237px;
  }
}
.dir-rtl {
    &#page-enrol-users {
        .col_userdetails {
            .subfield_picture {
                float: right;
            }
        }
        .enrol_user_buttons {
            float: left;
            .enrolusersbutton {
                margin-left: 0;
                margin-right: 1em;
                div {
                    margin-left: 0;
                }
            }
        }
        #filterform {
            .fitem {
                margin-right: 0;
                margin-left: .3em;
                label {
                    padding-right: 0;
                    padding-left: .3em;
                }
            }
        }
    }
}

#page-enrol-users .enrol-users-page-action input {
    margin-left: 0
}

/**
* Overide for RTL layout
**/
.dir-rtl .headermain {
    float: right;
}
.dir-rtl .headermenu {
    float: left;
}
.dir-rtl .loginbox .loginform .form-label {
    float: right;
    text-align: left;
}
.dir-rtl .loginbox .loginform .form-input {
    text-align: right;
    margin-right: 1%;
}
.dir-rtl .yui3-menu-hidden {
    left: 0;
}
#page-admin-roles-define.dir-rtl #rolesform .felement {
    margin-right: 180px;
}
#page-message-edit.dir-rtl table.generaltable th.c0 {
    text-align: right;
}
.corelightbox {
    background-color: #CCC;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-align: center;
}
.corelightbox img {
    position: fixed;
    top: 50%;
    left: 50%;
}

.mod-indent-outer {
    display: table;
}
.mod-indent {
    display: table-cell;
}
.label .mod-indent {
  float:left;
  padding-top:20px
}

/* Creates a series of .mod-indent-# rule declarations based on indent size and number of indent levels. */
@mod-indent-size: 30px;
@mod-indent-levels: 16;
.mod-indent-generate(@n, @i: 1) when (@i =< @n) {
    .mod-indent-@{i} {
        width: (@i * @mod-indent-size);
    }
    .mod-indent-generate(@n, (@i + 1));
}
.mod-indent-generate(@n, @i: 1) when (@i = @n) {
    .mod-indent-huge {
        width: (@i * @mod-indent-size);
    }
}
.mod-indent-generate(@mod-indent-levels);

/* Audio player size in 'block' mode (can only change width, height is hardcoded in JS) */
.resourcecontent .mediaplugin_mp3 object {
    height: 25px;
    width: 600px
}
.resourcecontent audio.mediaplugin_html5audio {
    width: 600px
}
/** Large resource images should avoid hidden overflow **/
.resourceimage {
    max-width: 100%;
}
/* Audio player size in 'inline' mode (can only change width, as above) */
.mediaplugin_mp3 object {
    height: 15px;
    width: 300px
}
audio.mediaplugin_html5audio {
    width: 300px
}
/* TinyMCE moodle media preview frame should not have padding */
.core_media_preview.pagelayout-embedded #content {
    padding: 0;
}
.core_media_preview.pagelayout-embedded #maincontent {
    height: 0;
}
/* ... */

